prop type updates

--- a/packages/reactberry:core/src/Avatar/index.mdx
+++ b/packages/reactberry:core/src/Avatar/index.mdx
@@ -3,8 +3,8 @@ name: Avatar
 menu: Components
 ---
 
-import { Playground, Props } from 'docz'
-import Avatar from '.'
+import {Playground, Props} from 'docz';
+import Avatar from '.';
 
 # Avatar
 
@@ -13,8 +13,6 @@ import Avatar from '.'
 ## Basic usage
 
 <Playground>
-
-  <Avatar size="small" color="primary" initials="Aa"></Avatar>
-  
-  
+  <Avatar type="icon" color="primary" />
+  <Avatar color="primary" initials="Rb" />
 </Playground>
