--- a/packages/reactberry:core/src/Box/index.mdx
+++ b/packages/reactberry:core/src/Box/index.mdx
@@ -1,6 +1,6 @@
 ---
 name: Box
-menu: Components
+menu: Reactberry:Core
 ---
 
 import { Playground, Props } from 'docz'
@@ -15,6 +15,6 @@ import Box from '.'
 <Playground>
 
   <Box>This is Some Box</Box>
-  
-  
+
+
 </Playground>
