--- a/packages/reactberry:core/src/Text/index.mdx
+++ b/packages/reactberry:core/src/Text/index.mdx
@@ -1,6 +1,6 @@
 ---
 name: Text
-menu: Components
+menu: reactberry/core
 ---
 
 import { Playground, Props } from 'docz'
@@ -15,6 +15,6 @@ import Text from '.'
 <Playground>
 
   <Text>Sample Text</Text>
-  
-  
+
+
 </Playground>
