--- a/packages/props.mdx
+++ b/packages/props.mdx
@@ -138,8 +138,8 @@ import { Box } from "@reactberry/core"
 
 | Prop                | CSS Property      | Theme Key |
 | ------------------- | ----------------- | --------- |
-| `w`, `width`        | `width`           | `sizes`   |
-| `h`, `height`       | `height`          | `sizes`   |
+| `width`             | `width`           | `sizes`   |
+| `height`            | `height`          | `sizes`   |
 | `minW`, `minWidth`  | `min-width`       | `sizes`   |
 | `maxW`, `maxWidth`  | `max-width`       | `sizes`   |
 | `minH`, `minHeight` | `min-height`      | `sizes`   |
@@ -153,53 +153,51 @@ import { Box } from "@reactberry/core"
 
 ### Flexbox
 
-> Note: Props in `*` will only work if you use the `Flex` component.
-
-| Prop                                      | CSS Property      | Theme Key |
-| ----------------------------------------- | ----------------- | --------- |
-| `alignItems`, \*`align`                   | `align-items`     | none      |
-| `alignContent`                            | `align-content`   | none      |
-| `justifyItems`                            | `justify-items`   | none      |
-| `justifyContent`, \*`justify`             | `justify-content` | none      |
-| `flexWrap`, \*`wrap`                      | `flex-wrap`       | none      |
-| `flexDirection`, `flexDir`, \*`direction` | `flex-direction`  | none      |
-| `flex`                                    | `flex`            | none      |
-| `flexGrow`                                | `flex-grow`       | none      |
-| `flexShrink`                              | `flex-shrink`     | none      |
-| `flexBasis`                               | `flex-basis`      | none      |
-| `justifySelf`                             | `justify-self`    | none      |
-| `alignSelf`                               | `align-self`      | none      |
-| `order`                                   | `order`           | none      |
+| Prop             | CSS Property      | Theme Key |
+| ---------------- | ----------------- | --------- |
+| `alignItems`     | `align-items`     | none      |
+| `alignContent`   | `align-content`   | none      |
+| `justifyItems`   | `justify-items`   | none      |
+| `justifyContent` | `justify-content` | none      |
+| `flexWrap`       | `flex-wrap`       | none      |
+| `flexDirection`  | `flex-direction`  | none      |
+| `flex`           | `flex`            | none      |
+| `flexGrow`       | `flex-grow`       | none      |
+| `flexShrink`     | `flex-shrink`     | none      |
+| `flexBasis`      | `flex-basis`      | none      |
+| `justifySelf`    | `justify-self`    | none      |
+| `alignSelf`      | `align-self`      | none      |
+| `order`          | `order`           | none      |
 
 ### Grid Layout
 
 > Note: Props in `*` will only work if you use the `Grid` component.
 
-| Prop                                       | CSS Property            | Theme Key |
-| ------------------------------------------ | ----------------------- | --------- |
-| `gridGap`, \*`gap`                         | `grid-gap`              | `space`   |
-| `gridRowGap`, \*`rowGap`                   | `grid-row-gap`          | `space`   |
-| `gridColumnGap`, \*`columnGap`             | `grid-column-gap`       | `space`   |
-| `gridColumn`, \*`column`                   | `grid-column`           | none      |
-| `gridRow`, \*`row`                         | `grid-row`              | none      |
-| `gridArea`, \*`area`                       | `grid-area`             | none      |
-| `gridAutoFlow`, \*`autoFlow`               | `grid-auto-flow`        | none      |
-| `gridAutoRows`, \*`autoRows`               | `grid-auto-rows`        | none      |
-| `gridAutoColumns`, \*`autoColumns`         | `grid-auto-columns`     | none      |
-| `gridTemplateRows`, \*`templateRows`       | `grid-template-rows`    | none      |
-| `gridTemplateColumns`, \*`templateColumns` | `grid-template-columns` | none      |
-| `gridTemplateAreas`, \*`templateAreas`     | `grid-template-areas`   | none      |
+| Prop                  | CSS Property            | Theme Key |
+| --------------------- | ----------------------- | --------- |
+| `gridGap`             | `grid-gap`              | `space`   |
+| `gridRowGap`          | `grid-row-gap`          | `space`   |
+| `gridColumnGap`       | `grid-column-gap`       | `space`   |
+| `gridColumn`          | `grid-column`           | none      |
+| `gridRow`             | `grid-row`              | none      |
+| `gridArea`            | `grid-area`             | none      |
+| `gridAutoFlow`        | `grid-auto-flow`        | none      |
+| `gridAutoRows`        | `grid-auto-rows`        | none      |
+| `gridAutoColumns`     | `grid-auto-columns`     | none      |
+| `gridTemplateRows`    | `grid-template-rows`    | none      |
+| `gridTemplateColumns` | `grid-template-columns` | none      |
+| `gridTemplateAreas`   | `grid-template-areas`   | none      |
 
 ### Position
 
-| Prop             | CSS Property | Theme Field |
-| ---------------- | ------------ | ----------- |
-| `pos`,`position` | `position`   | none        |
-| `zIndex`         | `z-index`    | `zIndices`  |
-| `top`            | `top`        | `space`     |
-| `right`          | `right`      | `space`     |
-| `bottom`         | `bottom`     | `space`     |
-| `left`           | `left`       | `space`     |
+| Prop       | CSS Property | Theme Field |
+| ---------- | ------------ | ----------- |
+| `position` | `position`   | none        |
+| `zIndex`   | `z-index`    | `zIndices`  |
+| `top`      | `top`        | `space`     |
+| `right`    | `right`      | `space`     |
+| `bottom`   | `bottom`     | `space`     |
+| `left`     | `left`       | `space`     |
 
 ### Shadow
 
