--- a/packages/reactberry:core/src/Badge/index.mdx
+++ b/packages/reactberry:core/src/Badge/index.mdx
@@ -1,6 +1,6 @@
 ---
 name: Badge
-menu: Components
+menu: reactberry/core
 ---
 
 import { Playground, Props } from 'docz'
@@ -15,6 +15,6 @@ import Badge from '.'
 <Playground>
 
   <Badge value="99" />
-  
-  
+
+
 </Playground>
