--- a/packages/props.mdx
+++ b/packages/props.mdx
@@ -34,12 +34,11 @@ each group.
 
 ### Color and background color
 
-| Prop               | CSS Property       | Theme Key |
-| ------------------ | ------------------ | --------- |
-| `color`            | `color`            | `colors`  |
-| `bg`, `background` | `background`       | `colors`  |
-| `bgColor`          | `background-color` | `colors`  |
-| `opacity`          | `opacity`          | none      |
+| Prop               | CSS Property | Theme Key |
+| ------------------ | ------------ | --------- |
+| `color`            | `color`      | `colors`  |
+| `bg`, `background` | `background` | `colors`  |
+| `opacity`          | `opacity`    | none      |
 
 ### Typography
 
@@ -57,59 +56,55 @@ each group.
 
 ### Layout, width and height
 
-| Prop                | CSS Property      | Theme Key |
-| ------------------- | ----------------- | --------- |
-| `w`, `width`        | `width`           | `sizes`   |
-| `h`, `height`       | `height`          | `sizes`   |
-| `minW`, `minWidth`  | `min-width`       | `sizes`   |
-| `maxW`, `maxWidth`  | `max-width`       | `sizes`   |
-| `minH`, `minHeight` | `min-height`      | `sizes`   |
-| `maxH`, `maxHeight` | `max-height`      | `sizes`   |
-| `d`, `display`      | `display`         | none      |
-| `boxSize`           | `width`, `height` | `sizes`   |
-| `verticalAlign`     | `vertical-align`  | none      |
-| `overflow`          | `overflow`        | none      |
-| `overflowX`         | `overflowX`       | none      |
-| `overflowY`         | `overflowY`       | none      |
+| Prop            | CSS Property      | Theme Key |
+| --------------- | ----------------- | --------- |
+| `width`         | `width`           | `sizes`   |
+| `height`        | `height`          | `sizes`   |
+| `minWidth`      | `min-width`       | `sizes`   |
+| `maxWidth`      | `max-width`       | `sizes`   |
+| `minHeight`     | `min-height`      | `sizes`   |
+| `maxHeight`     | `max-height`      | `sizes`   |
+| `display`       | `display`         | none      |
+| `boxSize`       | `width`, `height` | `sizes`   |
+| `verticalAlign` | `vertical-align`  | none      |
+| `overflow`      | `overflow`        | none      |
+| `overflowX`     | `overflowX`       | none      |
+| `overflowY`     | `overflowY`       | none      |
 
 ### Flexbox
 
-> Note: Props in `*` will only work if you use the `Flex` component.
-
-| Prop                                      | CSS Property      | Theme Key |
-| ----------------------------------------- | ----------------- | --------- |
-| `alignItems`, \*`align`                   | `align-items`     | none      |
-| `alignContent`                            | `align-content`   | none      |
-| `justifyItems`                            | `justify-items`   | none      |
-| `justifyContent`, \*`justify`             | `justify-content` | none      |
-| `flexWrap`, \*`wrap`                      | `flex-wrap`       | none      |
-| `flexDirection`, `flexDir`, \*`direction` | `flex-direction`  | none      |
-| `flex`                                    | `flex`            | none      |
-| `flexGrow`                                | `flex-grow`       | none      |
-| `flexShrink`                              | `flex-shrink`     | none      |
-| `flexBasis`                               | `flex-basis`      | none      |
-| `justifySelf`                             | `justify-self`    | none      |
-| `alignSelf`                               | `align-self`      | none      |
-| `order`                                   | `order`           | none      |
+| Prop             | CSS Property      | Theme Key |
+| ---------------- | ----------------- | --------- |
+| `alignItems`     | `align-items`     | none      |
+| `alignContent`   | `align-content`   | none      |
+| `justifyItems`   | `justify-items`   | none      |
+| `justifyContent` | `justify-content` | none      |
+| `flexWrap`       | `flex-wrap`       | none      |
+| `flexDirection`  | `flex-direction`  | none      |
+| `flex`           | `flex`            | none      |
+| `flexGrow`       | `flex-grow`       | none      |
+| `flexShrink`     | `flex-shrink`     | none      |
+| `flexBasis`      | `flex-basis`      | none      |
+| `justifySelf`    | `justify-self`    | none      |
+| `alignSelf`      | `align-self`      | none      |
+| `order`          | `order`           | none      |
 
 ### Grid Layout
 
-> Note: Props in `*` will only work if you use the `Grid` component.
-
-| Prop                                       | CSS Property            | Theme Key |
-| ------------------------------------------ | ----------------------- | --------- |
-| `gridGap`, \*`gap`                         | `grid-gap`              | `space`   |
-| `gridRowGap`, \*`rowGap`                   | `grid-row-gap`          | `space`   |
-| `gridColumnGap`, \*`columnGap`             | `grid-column-gap`       | `space`   |
-| `gridColumn`, \*`column`                   | `grid-column`           | none      |
-| `gridRow`, \*`row`                         | `grid-row`              | none      |
-| `gridArea`, \*`area`                       | `grid-area`             | none      |
-| `gridAutoFlow`, \*`autoFlow`               | `grid-auto-flow`        | none      |
-| `gridAutoRows`, \*`autoRows`               | `grid-auto-rows`        | none      |
-| `gridAutoColumns`, \*`autoColumns`         | `grid-auto-columns`     | none      |
-| `gridTemplateRows`, \*`templateRows`       | `grid-template-rows`    | none      |
-| `gridTemplateColumns`, \*`templateColumns` | `grid-template-columns` | none      |
-| `gridTemplateAreas`, \*`templateAreas`     | `grid-template-areas`   | none      |
+| Prop                  | CSS Property            | Theme Key |
+| --------------------- | ----------------------- | --------- |
+| `gridGap`             | `grid-gap`              | `space`   |
+| `gridRowGap`          | `grid-row-gap`          | `space`   |
+| `gridColumnGap`       | `grid-column-gap`       | `space`   |
+| `gridColumn`          | `grid-column`           | none      |
+| `gridRow`             | `grid-row`              | none      |
+| `gridArea`            | `grid-area`             | none      |
+| `gridAutoFlow`        | `grid-auto-flow`        | none      |
+| `gridAutoRows`        | `grid-auto-rows`        | none      |
+| `gridAutoColumns`     | `grid-auto-columns`     | none      |
+| `gridTemplateRows`    | `grid-template-rows`    | none      |
+| `gridTemplateColumns` | `grid-template-columns` | none      |
+| `gridTemplateAreas`   | `grid-template-areas`   | none      |
 
 ### Layout, width and height
 
