--- a/packages/reactberry:core/src/Avatar/index.mdx
+++ b/packages/reactberry:core/src/Avatar/index.mdx
@@ -8,11 +8,17 @@ import Avatar from '.';
 
 # Avatar
 
-<Props of={Avatar} />
+#### Basic usage
 
-## Basic usage
+<Avatar type="icon" color="primary" />
+
+#
 
 <Playground>
   <Avatar type="icon" color="primary" />
   <Avatar color="primary" initials="Rb" />
 </Playground>
+
+## Props
+
+<Props of={Avatar} />
